# SafeGen

./: Cargo.toml  README.md  index.html  styles.css
.github/workflows/: Build.yml  ci.yml  release.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
