[package]
name = "safe-gen"
version = "0.0.2"
description = "A simple password generator."
authors = ["Jerimiah"]
edition = "2021"

[lib]
name = "safe_gen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.*"
open = "5.*"
