[package]
name = "safe-gen"
version = "0.1.0"
description = "A simple password generator."
authors = ["Jerimiah"]
edition = "2024"
license = "MIT"
repository = "https://github.com/gage-lodba/SafeGen"

[lib]
name = "safe_gen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-clipboard-manager = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = "0.9"
open = "5"
